--- a/src/index.html
+++ b/src/index.html
@@ -5,17 +5,15 @@
     <title>AngularDashboard</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
-    <link
-      rel="stylesheet"
-      href="node_modules/bootstrap/dist/css/bootstrap.min.css"
-    />
+    
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
     />
   </head>
-  <body class="body">
+  <body >
     <app-root></app-root>
   </body>
 </html>
